# jvm-python

./: .gitignore  Demo.java  GaussTest.java  README.md  interperter.py  main.py  parse.py  pyproject.toml  requirements.txt  simple.py  test.py  tmp.txt
classfile/: __init__.py  class_file.py  class_reader.py  constant_info.py  constant_pool.py
classpath/: classpath.py  entry.py  entry_composite.py  entry_dir.py  entry_zip.py  new_entry.py
classreader/: __init__.py  class_file.py  class_reader.py
common/: cons.py
data/: ArrayDemo.java  BoxTest.java  BubbleSortTest.java  CloneTest.java  FibonacciTest.java  GetClassTest.java  HelloWorld.java  InvokeDemo.java  MyObject.java  ObjectTest.java  ParseIntTest.java  PrintArgs.java  StringTest.java
instructions/: factory.py
instructions/base/: byte_reader.py  instruction.py
instructions/comparisons/: __init__.py  dcmp.py  fcmp.py  if_acmp.py  if_cond.py  if_icmp.py  lcmp.py
instructions/constants/: __init__.py  const.py  ipush.py  nop.py
instructions/control/: __init__.py  goto.py  loopupswtich.py  tableswitch.py
instructions/conversions/: __init__.py  d2x.py  f2x.py  i2x.py  l2x.py
instructions/extended/: __init__.py  goto_w.py  ifnonnull.py  ifnull.py  wide.py
instructions/loads/: __init__.py  aload.py  dload.py  fload.py  iload.py  lload.py
instructions/math/: iinc.py  rem.py
instructions/maths/: add.py  ande.py  div.py  iinc.py  mul.py  neg.py  ore.py  sh.py  (+3 more)
rtda/: frame.py  local_vars.py  object.py  operand_stack.py  slot.py  thread.py
scripts/: show_classfile.py  simple.py
tests/: test_frame.py
(+157 files in other folders)
